[package]
name = "twentyfirst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
savage_core = "0.2.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
urlencoding = "2.1.2"
