[package]
name = "twentythird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
enum-iterator = "1.3.0"
euclid = "0.22.7"
itertools = "0.10.5"
